[tool.poetry]
name = "forkwork"
version = "0.1.2"
description = ""
authors = ["Andriy Orehov <andriyorehov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22"
click = "^7.0"
cachecontrol = "^0.12.5"
lockfile = "^0.12.2"
tabulate = "^0.8.3"
"github3.py" = "^1.3"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
forkwork = 'forkwork.forkwork:cli'
